<resources>
    <string name="app_name">Dr. Wise</string>
    <string name="splash_screen_description">Splash Screen Image</string>

    <string name="shared_preferences_name">br.com.wiseonsoft</string>
    <string name="api_token_key">API_TOKEN_KEY</string>
    <string name="enter_email">E-mail</string>
    <string name="enter_password">Senha</string>
    <string name="btn_text_enter">Entrar</string>
    <string name="click_here">Clique aqui!</string>
    <string name="dont_have_account">Não possui conta ?</string>
    <string name="error_email_required">É necessário digitar um e-mail antes!</string>
    <string name="error_password_required">É necessário digitar uma senha antes!</string>
    <string name="authenticating">Autenticando...</string>
    <string name="register_text">Para registrar-se é simples, basta digitar as seguintes informações</string>
    <string name="e_mail">E-mail</string>
    <string name="digite_novamente_a_senha">Digite novamente a senha</string>
    <string name="senha">Senha</string>
    <string name="seu_nome">Seu nome</string>
    <string name="register">Registrar-se</string>
    <string name="registering">Registrando...</string>
    <string name="sucessful_create_user">Usuário criado com sucesso!</string>
</resources>
