<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".RegisterActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/color_accent"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp"
        app:contentPadding="10dp">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_text"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@color/background_light" />

    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:gravity="top">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edit_register_name"
            style="@style/Activity.Register.EditText"
            android:inputType="textPersonName"
            android:hint="@string/seu_nome"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edit_register_email"
            style="@style/Activity.Register.EditText"
            android:inputType="textEmailAddress"
            android:layout_below="@id/edit_register_name"
            android:hint="@string/e_mail"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edit_register_password"
            style="@style/Activity.Register.EditText"
            android:inputType="textPassword"
            android:layout_below="@id/edit_register_email"
            android:hint="@string/senha"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edit_register_password_confirmation"
            style="@style/Activity.Register.EditText"
            android:inputType="textPassword"
            android:layout_below="@id/edit_register_password"
            android:hint="@string/digite_novamente_a_senha"/>

        <android.support.v7.widget.CardView
            android:id="@+id/card_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="16dp"
            android:layout_below="@id/edit_register_password_confirmation"
            app:cardBackgroundColor="@color/color_accent_dark"
            app:cardElevation="0dp"
            app:cardCornerRadius="20dp"
            app:contentPaddingBottom="6dp"
            app:contentPaddingTop="6dp">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/text_register_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/register"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/background_light" />

        </android.support.v7.widget.CardView>

    </RelativeLayout>

</android.support.v7.widget.LinearLayoutCompat>